// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`public API surface (golden — update intentionally) > @classytic/vixel 1`] = `
[
  "ASPECT_DIMENSIONS",
  "AbortError",
  "BLEND_MODES",
  "COMPOSITING_DESCRIPTORS",
  "CURRENT_SPEC_VERSION",
  "ConfigError",
  "ErrorCode",
  "FFmpegError",
  "HLSProcessor",
  "HLSProcessorError",
  "HLS_AUDIO_CODECS",
  "HLS_VIDEO_CODECS",
  "LOUDNESS_PRESETS",
  "Logger",
  "MAX_PROXY_HEIGHT",
  "MAX_PROXY_WIDTH",
  "PLATFORM_LIMITS",
  "ProbeError",
  "QUALITY_PRESETS",
  "SPEC_UPGRADES",
  "Source",
  "TempFileManager",
  "VariantEncoder",
  "VideoPipeline",
  "VixelError",
  "WEBM_AUDIO_CODECS",
  "WEBM_VIDEO_CODECS",
  "addWatermark",
  "adjustColor",
  "adjustVolume",
  "applyFFmpegFilter",
  "applyLut",
  "assertSafeUrl",
  "blend",
  "blendDescriptor",
  "buildAudioMixFilter",
  "buildBlendFilter",
  "buildChromaKeyGraph",
  "buildColorAdjustFilter",
  "buildCommandString",
  "buildDrawtextFilter",
  "buildEditorProxyArgs",
  "buildFadeFilters",
  "buildGlitchFilter",
  "buildGlowFilter",
  "buildKenBurnsFilter",
  "buildLoudnormFilter",
  "buildLut3dFilter",
  "buildMaskFilter",
  "buildMotionEffectFilter",
  "buildOverlayFilter",
  "buildParallaxFilter",
  "buildReframeFilter",
  "buildRgbSplitFilter",
  "buildShakeFilter",
  "buildSmartReframeFilter",
  "buildSpeedRampFilter",
  "buildSubtitlesFilter",
  "buildXfadeGraph",
  "buildZoomPunchFilter",
  "burnSubtitles",
  "changeSpeed",
  "checkFFmpegVersion",
  "checkHLSCompatibility",
  "chromaKey",
  "chromaKeyDescriptor",
  "clampParam",
  "compileScalarKeyframes",
  "compressVideo",
  "concatWithTransitions",
  "concatenateVideos",
  "configToSpawnOptions",
  "convertFormat",
  "createCopyVariant",
  "createLimiter",
  "cropResize",
  "cropWindow",
  "defaultPosterSec",
  "defaultSpriteIntervalSec",
  "detectHardwareAccel",
  "downscaleFilter",
  "editorPackage",
  "editorProxy",
  "escapeDrawtext",
  "escapeSubtitlePath",
  "estimateGifSize",
  "estimateThumbnailSize",
  "extractAudio",
  "extractFrameAt",
  "extractThumbnail",
  "extractThumbnails",
  "fade",
  "fetchToFile",
  "fitWithin",
  "formatDuration",
  "formatTimecode",
  "formatWebVTTTime",
  "generateChapters",
  "generateChaptersFromTranscript",
  "generateGif",
  "generateSmartChapters",
  "generateSource",
  "generateSprites",
  "getPreset",
  "getRecommendedGifConfig",
  "glow",
  "hlsLadder",
  "isAbortError",
  "isConfigError",
  "isFFmpegError",
  "isHLSAudioCodec",
  "isHLSProcessorError",
  "isHLSVideoCodec",
  "isMediaReference",
  "isPrivateOrReservedIp",
  "isProbeError",
  "isVixelError",
  "kenBurns",
  "ladderFor",
  "lavfiDescriptor",
  "mapSettled",
  "mapWithConcurrency",
  "mask",
  "maskDescriptor",
  "mediaInputArgs",
  "migrateSpec",
  "mixAudio",
  "motionEffect",
  "normalizeAudio",
  "normalizeLoudness",
  "optimizeGifForSize",
  "outputSize",
  "overlay",
  "parallax3d",
  "parseTimecode",
  "pipeline",
  "probeVideo",
  "reframe",
  "removeQuietly",
  "replaceAudio",
  "resolveToPath",
  "sampleTrack",
  "selectQualityLadder",
  "selectVariant",
  "slideshow",
  "smartReframe",
  "smoothTrack",
  "snapToFrame",
  "sourceDescriptor",
  "spawnFFmpeg",
  "speedRamp",
  "toEven",
  "toFrames",
  "toSeconds",
  "toVixelError",
  "trimVideo",
  "tryCatch",
  "tryCatchSync",
  "validateGifDuration",
  "validateSpeedRamp",
  "variantToPreset",
]
`;

exports[`public API surface (golden — update intentionally) > @classytic/vixel/captions 1`] = `
[
  "CAPTION_PRESETS",
  "buildAss",
  "buildCueText",
  "buildStyleLine",
  "burnCaptions",
  "cueEvents",
  "hexToAssBgr",
  "msToAssTime",
]
`;

exports[`public API surface (golden — update intentionally) > @classytic/vixel/compose 1`] = `
[
  "BUILTIN_EFFECTS",
  "BUILTIN_TEXT_ANIMATIONS",
  "BUILTIN_TRANSITIONS",
  "CURRENT_SPEC_VERSION",
  "ENTRANCE_DEFAULTS",
  "TEXT_LOOP_PERIOD",
  "beatSyncSpec",
  "buildComposeGraph",
  "buildEffectsFilter",
  "buildTextOverlayAss",
  "compileScalarKeyframes",
  "compose",
  "defineComposition",
  "detectBeats",
  "entranceMotionVec",
  "estimateBpm",
  "formatTimecode",
  "fpsNumber",
  "frameToPx",
  "hasEffect",
  "isMediaReference",
  "isSlide",
  "isVideoSource",
  "loopAt",
  "mediaInputArgs",
  "migrateSpec",
  "normalizeSpec",
  "overlayWidthPx",
  "overlayXY",
  "parseTimecode",
  "pickOnsets",
  "planTimeline",
  "registerEffect",
  "registerTransition",
  "resolveToPath",
  "resolveTransitionXfade",
  "snapToFrame",
  "sourceUrl",
  "textDesignToFlatStyle",
  "toFrames",
  "toSeconds",
  "totalDurationSec",
  "visualTrackEndSec",
]
`;

exports[`public API surface (golden — update intentionally) > @classytic/vixel/compositing 1`] = `
[
  "BLEND_MODES",
  "COMPOSITING_DESCRIPTORS",
  "blend",
  "blendDescriptor",
  "buildBlendFilter",
  "buildChromaKeyGraph",
  "buildMaskFilter",
  "chromaKey",
  "chromaKeyDescriptor",
  "mask",
  "maskDescriptor",
]
`;

exports[`public API surface (golden — update intentionally) > @classytic/vixel/generators 1`] = `
[
  "ASPECT_DIMENSIONS",
  "LOUDNESS_PRESETS",
  "addWatermark",
  "adjustColor",
  "adjustVolume",
  "applyLut",
  "buildAudioMixFilter",
  "buildColorAdjustFilter",
  "buildDrawtextFilter",
  "buildFadeFilters",
  "buildGlitchFilter",
  "buildGlowFilter",
  "buildKenBurnsFilter",
  "buildLoudnormFilter",
  "buildLut3dFilter",
  "buildMotionEffectFilter",
  "buildOverlayFilter",
  "buildParallaxFilter",
  "buildReframeFilter",
  "buildRgbSplitFilter",
  "buildShakeFilter",
  "buildSmartReframeFilter",
  "buildSpeedRampFilter",
  "buildSubtitlesFilter",
  "buildXfadeGraph",
  "buildZoomPunchFilter",
  "burnSubtitles",
  "changeSpeed",
  "compressVideo",
  "concatWithTransitions",
  "concatenateVideos",
  "convertFormat",
  "cropResize",
  "cropWindow",
  "detectHardwareAccel",
  "escapeDrawtext",
  "escapeSubtitlePath",
  "estimateGifSize",
  "estimateThumbnailSize",
  "extractAudio",
  "extractFrameAt",
  "extractThumbnail",
  "extractThumbnails",
  "fade",
  "generateChapters",
  "generateChaptersFromTranscript",
  "generateGif",
  "generateSmartChapters",
  "generateSource",
  "generateSprites",
  "glow",
  "kenBurns",
  "mixAudio",
  "motionEffect",
  "normalizeAudio",
  "normalizeLoudness",
  "overlay",
  "parallax3d",
  "reframe",
  "replaceAudio",
  "sampleTrack",
  "slideshow",
  "smartReframe",
  "smoothTrack",
  "sourceDescriptor",
  "speedRamp",
  "trimVideo",
  "validateSpeedRamp",
]
`;

exports[`public API surface (golden — update intentionally) > @classytic/vixel/profiles 1`] = `
[
  "buildEditorProxyArgs",
  "defaultPosterSec",
  "defaultSpriteIntervalSec",
  "editorPackage",
  "editorProxy",
  "hlsLadder",
  "ladderFor",
]
`;

exports[`public API surface (golden — update intentionally) > @classytic/vixel/utils 1`] = `
[
  "Logger",
  "createChildLogger",
  "formatWebVTTTime",
]
`;
